@startuml mmda-core-api
skinparam defaultFontName "Microsoft YaHei"
skinparam defaultFontSize 12
skinparam shadowing false
set namespaceSeparator none
skinparam nodesep 12
skinparam ranksep 26
skinparam packageStyle rectangle
hide circle
hide empty members
title mmda-core-api　类关系图（14 个类型 / 3,372 行）
legend right
  图中节点 7 / 14 个：按模块内被引用度排序取前 34
  实线空心箭头=extends；虚线空心箭头=implements
  <u>虚线开放箭头=类型引用</u>（数字=引用它的文件数，≥2 才画）
  真源：src/main/java 源码实测（import + 同包名引用 + extends/implements）
endlegend
package "api" {
  interface "ReactiveApiController" as T2
  abstract class "ReactiveEntityController" as T1
}
package "api.exceptions" {
  class "QueryParameterException" as T5
}
package "clients" {
  class "ApiClient" as T3
  class "FileClient" as T6
}
package "web" {
  class "ResponseResult" as T0
  abstract class "WebLocaleResolver" as T4
}
T2 <|.. T1
T3 <|-- T6
T2 ..> T1 : 1
T2 ..> T0 : 2
T1 ..> T2 : 1
T1 ..> T5 : 2
T1 ..> T6 : 2
T1 ..> T0 : 2
T1 ..> T4 : 2
T3 ..> T0 : 2
T6 ..> T3 : 1
footer
  <b>模块外依赖（真源 pom.xml）</b>　源码模块：mmda-core-caching · mmda-core-data · mmda-core-entities · mmda-core-metadata · mmda-core-security · mmda-core-services　|　预编译 jar（scope=system）：mmda-core-utils
endfooter
@enduml
